Fixed z-index of MLW hero

--- a/src/css/custom-new.css
+++ b/src/css/custom-new.css
@@ -360,7 +360,7 @@ ul.new-features p {
   margin: 0 auto;
   overflow: hidden;
   text-align: center;
-  z-index: 100;
+  z-index: 5;
 }
 #hero .hero-data {
   background-color: rgba(64,75,154,0);
